Read all data, API completed

--- a/ScrapeYahooFinanceInformationAPI/ScrapeYahooFinanceInformationAPI.csproj
+++ b/ScrapeYahooFinanceInformationAPI/ScrapeYahooFinanceInformationAPI.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
+    <ProjectReference Include="..\CommonLayer\CommonLayer.csproj" />
+  </ItemGroup>
+
 </Project>
