--- a/ScrapeYahooFinanceInformationAPI/appsettings.json
+++ b/ScrapeYahooFinanceInformationAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyConnectionString": "Data Source=DESKTOP-R46BFPQ;Initial Catalog=YahooFinance;User ID=admin;Password=admin"
+  }
 }
