Change Connection string name, added README.md file

--- a/ScrapeYahooFinanceInformationAPI/appsettings.json
+++ b/ScrapeYahooFinanceInformationAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnectionString": "Data Source=DESKTOP-R46BFPQ;Initial Catalog=YahooFinance;User ID=admin;Password=admin"
+    "YahooDBConStr": "Data Source=DESKTOP-R46BFPQ;Initial Catalog=YahooFinance;User ID=admin;Password=admin"
   }
 }
